Update versioning details

--- a/news_transitions.info.yml
+++ b/news_transitions.info.yml
@@ -1,7 +1,7 @@
 name: News Transitions
 type: module
 description: Handles transitions of news content between different placements.
-core_version_requirement: ^10
+core_version_requirement: ^9.4 || ^10
 package: Custom
 dependencies:
   - drupal:views
